--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <title>Dan Owen</title>
 </head>
 <body>
-<h1>Dan owen</h1>
-<hr>
-<ul>
-<li>one</li>
-<li>two</li>
-</ul>
+  <h1>Dan Owen</h1>
+  <p>Computer nerd and </em>mostly</em> self-taught programmer</p>
+  <p>I am now learning <strong>web dev and ios dev</strong>
+  <hr>
+  <h3>My Hobbies</h3>
+  <ul>
+    <li>windows Application Programming</li>
+    <li>MacOS Application Programming</li>
+    <li>iOS Programming</li>
+    <li>Scripting</li>
+    <li>Integration and Autmation</li>
+    <li>Digital Hardware & Electronics</li>
+  </ul>
 </body>
 </html>
